# SubAgenticAI

./: .gitignore  COMPARISON.md  Cloud-Native-Resource-Governance.md  IMPLEMENTATION.md  README.md  SubAgenticAI.sln  Trust-Based-Autonomous-Agent-Ecosystems.md  Trust-Model-QA.md  Trust-Model-Summary.md  Trust-Model.md
SubAgenticAI.CSharp/: README.md  SubAgenticAI.sln
SubAgenticAI.CSharp/SubAgenticAI.Core/: CloudResourceAllocationProfile.cs  EnforcementAction.cs  FrontLineAgent.cs  ResourceUsageMetrics.cs  SubAgent.cs
SubAgenticAI.CSharp/SubAgenticAI.Example/: Program.cs  SubAgenticAI.Example.csproj
SubAgenticAI.Core/: CommunicationAuthorization.cs  FrontLineAgent.cs  ISubAgent.cs  ITrustBroker.cs  MissionStatus.cs  SecurityLevel.cs  SimpleTrustBroker.cs  SubAgent.cs  TrustLevel.cs  TrustProfile.cs
SubAgenticAI.Demo/: Program.cs  SubAgenticAI.Demo.csproj
SubAgenticAI.Python/: README.md  example.py  pyproject.toml
SubAgenticAI.Python/subagentic_ai/: __init__.py  cloud_resource_profile.py  enforcement.py  front_line_agent.py  resource_metrics.py  sub_agent.py
subagentic_ai_py/: README.md  pyproject.toml
subagentic_ai_py/demo/: __init__.py  demo.py
subagentic_ai_py/subagentic_ai/: __init__.py  communication_authorization.py  front_line_agent.py  mission_status.py  security_level.py  sub_agent.py  trust_broker.py  trust_level.py  trust_profile.py
