[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subagentic-ai"
version = "0.1.0"
description = "SubAgenticAI - Cloud-Native Resource Governance Implementation"
readme = "README.md"
authors = [
    { name = "SubAgenticAI Team" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/RonWright/SubAgenticAI"
Repository = "https://github.com/RonWright/SubAgenticAI"

[tool.setuptools.packages.find]
where = ["."]
include = ["subagentic_ai*"]

[tool.setuptools.package-data]
subagentic_ai = ["py.typed"]
